# packages

./: .gitignore  PUBLISHING-GUIDE.md  PUBLISHING.md  README.md  package-lock.json  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml  npm-publish.yml  ruby-publish.yml  rust-publish.yml
.net/: README.md
.net/TanStackShip.UtmParse/: README.md  TanStackShip.UtmParse.csproj  UtmParams.cs  UtmParser.cs
actions/: README.md
actions/utm-capture-action/: README.md  action.yml  index.js  package.json
chrome-extension/: README.md
chrome-extension/utm-inspector/: README.md  content.js  manifest.json  popup.html  popup.js
cli/utm-cli/: README.md  package.json
cli/utm-cli/src/: index.ts
cloudflare-template/: README.md
cloudflare-template/tanstackship-utm-worker/: README.md  package.json  wrangler.toml
cloudflare-template/tanstackship-utm-worker/src/: index.ts
cocoapods/: README.md
cocoapods/UtmParse/: LICENSE  README.md  UtmParse.podspec
dart-pub/: README.md
dart-pub/utm_parse/: .gitignore  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
dart-pub/utm_parse/.dart_tool/: package_config.json  package_graph.json
dart-pub/utm_parse/lib/: utm_parse.dart
dart-pub/utm_parse/lib/src/: utm_params.dart  utm_parser.dart
docker/: README.md
docker/utm-worker/: Dockerfile  README.md  package-lock.json  package.json  server.js  wrangler.toml
docker/utm-worker/src/: index.ts
go/: README.md
go/utm-parse/: README.md  go.mod  utm.go  utm_test.go
homebrew-tap/: README.md
homebrew-tap/Formula/: utm-cli.rb
homebrew-tap/utm-cli/: README.md  main.go
java/: README.md
java/utm-parse/: README.md  pom.xml
java/utm-parse/src/main/java/com/tanstackship/utm/: UtmParams.java  UtmParser.java
mcp-server/: README.md
mcp-server/utm-mcp-server/: README.md  package.json
mcp-server/utm-mcp-server/src/: index.ts
php-conpackist/: README.md
php-conpackist/tanstackship-utm-parse/: README.md  composer.json
php-conpackist/tanstackship-utm-parse/src/: Params.php  UtmParser.php
python/: README.md
python/utm-parse/: README.md  pyproject.toml
python/utm-parse/src/utm_parse/: __init__.py  parser.py
ruby/: README.md
ruby/utm_parse/: README.md  tanstack_utm_parse-0.1.0.gem  utm_parse.gemspec
ruby/utm_parse/lib/: utm_parse.rb
ruby/utm_parse/lib/utm_parse/: version.rb
rust/: README.md
rust/short-link-parse/: Cargo.toml  README.md
rust/short-link-parse/src/: error.rs  fingerprint.rs  lib.rs
rust/utm-parse/: Cargo.toml  README.md
rust/utm-parse/src/: error.rs  lib.rs  params.rs  parser.rs  platform.rs
scripts/: publish-skills-marketplace.sh  publish-skills.sh  update-readmes.sh
skills/tanstack-multi-language/: README.md  SKILL.md  package.json
skills/tanstack-saas-scaffold/: README.md  SKILL.md  package.json
supabase-template/: README.md
supabase-template/migrations/: 001_analytics.sql
swift/: Package.swift  README.md
swift/Sources/UtmParse/: UtmParams.swift  UtmParser.swift
vercel-template/: README.md  middleware.ts
vercel-template/api/: track.ts
vscode-extension/: README.md
vscode-extension/tanstack-ship-snippets/: README.md  package.json
vscode-extension/tanstack-ship-snippets/snippets/: react.json  typescript.json
wordpress/: README.md
wordpress/utm-tracker/: README.md  utm-tracker.php
