[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tanstack-utm-parse"
version = "0.1.0"
description = "Fast UTM parameter parsing library for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Huifer", email = "about@tanstackship.com"}
]
homepage = "https://tanstackship.com"
repository = "https://github.com/tanstackship/packages"
keywords = ["utm", "analytics", "parsing"]
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Homepage = "https://tanstackship.com"
Documentation = "https://tanstackship.com/docs"
Repository = "https://github.com/tanstackship/packages"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
