[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tanstack-utm-parse"
version = "0.1.0"
description = "Fast UTM parameter parsing library for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Huifer", email = "about@tanstackship.com"}
]
keywords = ["utm", "analytics", "parsing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://tanstackship.com"
Documentation = "https://tanstackship.com/docs"
Repository = "https://github.com/tanstackship/packages"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
utm_parse = ["py.typed"]
