[package]
name = "tanstack_short_link_parse"
version = "0.1.0"
edition = "2021"
description = "Parse short links and extract tracking information"
license = "MIT"
repository = "https://github.com/tanstackship/packages"
homepage = "https://tanstackship.com"
documentation = "https://docs.rs/tanstack_short_link_parse"
authors = ["Huifer <about@tanstackship.com>"]
keywords = ["short-link", "url", "tracking"]
