[package]
name = "utm-parse"
version = "0.1.0"
edition = "2021"
description = "Fast UTM parameter parsing and normalization library"
license = "MIT"
authors = ["Huifer <about@tanstackship.com>"]
homepage = "https://tanstackship.com"
repository = "https://github.com/orgs/tanstackship"
documentation = "https://docs.rs/utm-parse"
keywords = ["utm", "parse", "tracking", "analytics", "marketing"]
categories = ["web-programming", "parsing", "marketing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "utm_bench"
harness = false
