[package]
name = "tanstack_utm_parse"
version = "0.1.0"
edition = "2021"
description = "High-performance UTM parameter parsing for Rust"
license = "MIT"
repository = "https://github.com/tanstackship/packages"
homepage = "https://tanstackship.com"
documentation = "https://docs.rs/tanstack_utm_parse"
authors = ["Huifer <about@tanstackship.com>"]
keywords = ["utm", "analytics", "parse", "url"]

[dependencies]

[dev-dependencies]
